# Diffusion2

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  loading colab.ipynb  main.py  pyproject.toml
Dataset/: plane.py
Logger/: logger.py
app/: app.py
configs/: base.yaml
logs/: inference-logs  train-logs
scoing/: FID.py
scripts/: temp.ipynb
src/argparsers/: inference_parser.py  train_parser.py
src/mini_diffusion/: config.py  device.py  diffusion.py  model.py  preprocessing.py  sample.py  train.py
tests/: forward_diffusion_test.py
tests/experement/exp_1/: exp1
